--- a/porfolio/templates/parcials/navbar.html
+++ b/porfolio/templates/parcials/navbar.html
@@ -17,7 +17,7 @@
           <!-- <a class="btn btn-primary btn-sm" href="{% static 'porfolio/Certificado.pdf' %}" target="_blank">Descargar VC</a> -->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin">Panel</a>
+          <a class="nav-link" href="/admin" target="_blank">Panel</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
