--- a/porfolio/templates/home.html
+++ b/porfolio/templates/home.html
@@ -16,7 +16,8 @@
 
      </div>
   </header>
-  <div class="text-center mb-5">
+  <div class="text-start mb-5">
+    <h4 class="text-center">Proyectos</h4>
     <div class="container">
       <div class="row">
         {% for project in projects %}
