--- a/porfolio/templates/home.html
+++ b/porfolio/templates/home.html
@@ -14,7 +14,7 @@
           <h3>{{ perfil.nombre }}</h3>
           <h5>{{ perfil.perfilOcupaciona }}</h5>
           <p>{{ perfil.descripcion }}</p>
-          <a href="{% static 'porfolio/Hoja de Vida.pdf' %}" class="btn btn-primary btn-ms rounded my-3" target="_blank">Desacargar CV</a>
+          <a href="{{ perfil.curriculum.url }}" class="btn btn-primary btn-ms rounded my-3" target="_blank">Desacargar CV</a>
 
 
         {% endfor %}
