--- a/formacion/templates/formacion.html
+++ b/formacion/templates/formacion.html
@@ -11,13 +11,13 @@
 <div class="container">
     <div class="row ">
         {% for formacion in formaciones %}
-        <div class="col-md-4 p-4 ">
-          <div class="card bg-black h-100 card-project" style="max-height: 300px; font-size: 0.9rem;">
-            <img src="{{ formacion.imagen.url }}" alt="image of {{ formacion.title }}" class="card-img-top" style="height: 210px; width: 100%; object-fit: cover;">
+        <div class="col-md-4 p-4 " style="max-height: 320px; font-size: 0.9rem;">
+          <div class="card bg-black h-100 card-project">
+            <img src="{{ formacion.imagen.url }}" alt="image of {{ formacion.title }}" class="card-img-top" style="height: 190px; width: 100%; object-fit: cover;">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">{{ formacion.title|truncatechars:20 }}</h5>
               <p class="card-text">{{ formacion.date }}</p>
-              <p class="card-text">{{ formacion.description|safe|truncatechars:20 }}</p>
+              <p class="card-text">{{ formacion.description|safe|truncatechars:30 }}</p>
               <a href="{% url 'formacion:formacion_detail' formacion.id %}" class="btn btn-primary rounded-0 btn-sm mt-auto">Leer Más</a>
             </div>
           </div>
