actualizacion de la expereiencia de usuario, se añadio otra ruta para los proyectos

--- a/formacion/templates/formacion_detail.html
+++ b/formacion/templates/formacion_detail.html
@@ -8,6 +8,6 @@
     <div class="my-4">
         <p> {{ formacion.description }} </p>
     </div>
-    <a href="/formacion" class="btn btn-primary form-control">Volver</a>
+    <a href="/formacion" class="btn btn-primary form-control">Atras</a>
    </div>
 {% endblock %}
