--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -7,5 +7,6 @@
     <div class="my-4">
         <p> {{ post.description }} </p>
     </div>
+    <a href="/blog" class="btn btn-primary form-control">Atras</a>
    </div>
 {% endblock %}
