--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html'%}
 
 {% block content %}
-<h1 class="container">Publicaciones</h1>
+<h5 class="text-center">Publicaciones</h5>
 {% for posts in posts %}
 <div class="p-3 container">
     <div class="card card-body bg-black">
